fix: graph overflow issue

--- a/frontend/css/year-in-music.less
+++ b/frontend/css/year-in-music.less
@@ -569,6 +569,7 @@
       .graph {
         color: var(--selectedColor);
         overflow: scroll;
+        overflow-y: hidden;
         > * {
           min-width: 550px;
         }
